<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <include
        layout="@layout/toolbar"
        android:id="@+id/my_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_add"
        android:textAllCaps="true"
        android:id="@+id/textView269"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products_name"
        android:id="@+id/textView270"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/e_g"
        android:id="@+id/editText32"
        android:paddingLeft="5dp"
        android:background="@drawable/cyan_white_backgroud_border"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cas"
        android:textAllCaps="true"
        android:id="@+id/textView271"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/enter_cas1"
            android:id="@+id/editText33"
            android:paddingLeft="5dp"
            android:background="@drawable/cyan_white_backgroud_border"
            android:layout_weight="1" />

        <View
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:background="@color/colorSecondary"
            android:layout_gravity="center_vertical">
        </View>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/enter_cas2"
            android:id="@+id/editText34"
            android:paddingLeft="5dp"
            android:background="@drawable/cyan_white_backgroud_border"
            android:layout_weight="1" />

        <View
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:background="@color/colorSecondary"
            android:layout_gravity="center_vertical">
        </View>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/enter_cas3"
            android:id="@+id/editText35"
            android:paddingLeft="5dp"
            android:background="@drawable/cyan_white_backgroud_border"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/cyan_cyan_backgroud_border">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView102"
            android:src="@drawable/add_icon" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/textView272"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btn_submit_add"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="@color/white_color"
        android:background="@color/colorMain" />

</LinearLayout>