<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorMain"
        android:id="@+id/tabs_for_community"
        android:visibility="visible"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timeline"
            android:textAllCaps="true"
            android:textColor="@color/green_color"
            android:id="@+id/timeline_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/post"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/post_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/answer"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/answer_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/question"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/question_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/chemical"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/chemical_tab"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/my_container_community"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs_for_community"
        android:layout_marginTop="5dp">
    </FrameLayout>

</RelativeLayout>