<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorMain"
        android:id="@+id/buyers_tabs"
        android:visibility="visible"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quotes"
            android:textAllCaps="true"
            android:textColor="@color/green_color"
            android:id="@+id/quotes_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/inquiries"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/inquiries_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/orders"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/orders_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/favorites"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/favorites_tab"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/my_container_acc_buyers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buyers_tabs"
        android:layout_marginTop="5dp">
    </FrameLayout>

</RelativeLayout>