<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorMain"
        android:id="@+id/sellers_tabs"
        android:visibility="visible"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/inquiries"
            android:textAllCaps="true"
            android:textColor="@color/green_color"
            android:id="@+id/inquiry_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/opportunities"
            android:textAllCaps="true"
            android:id="@+id/opportunity_tab"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/orders"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/order_tab"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/products_for_sale"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:id="@+id/product_tab"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/my_container_acc_sellers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sellers_tabs"
        android:layout_marginTop="5dp">
    </FrameLayout>

</RelativeLayout>