<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        layout="@layout/toolbar"
        android:id="@+id/my_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:id="@+id/forgot_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank"
            android:textAllCaps="true"
            android:id="@+id/textView"
            android:textSize="22sp"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:background="@color/white_color"
            android:layout_marginTop="10dp">
        </View>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:id="@+id/textView6"
            android:layout_marginBottom="10dp"
            android:textSize="10sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_email"
            android:id="@+id/textView7"
            android:layout_marginBottom="10dp"
            android:textSize="10sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:id="@+id/textView8"
            android:layout_marginBottom="10dp"
            android:textSize="10sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_from"
            android:id="@+id/textView9"
            android:layout_marginBottom="10dp"
            android:textSize="10sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="80dp"

            android:id="@+id/imageView4"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_thank_you_check"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/done"
            android:background="@color/color_buttons_for_login_page"
            android:id="@+id/btnDone"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>