<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:id="@+id/forgot_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:id="@+id/textView"
            android:textAllCaps="true"
            android:textSize="28sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/forgot_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/new_pass"
            android:paddingLeft="10dp"
            android:hint="@string/new_pass"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:background="@drawable/background_lists"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/conf_pass"
            android:paddingLeft="10dp"
            android:hint="@string/conf_pass"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:background="@drawable/background_lists"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/buttons_layout"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:id="@+id/btn_change_pass"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:background="@drawable/background_buttons"
            android:textColor="@android:color/white" />
    </LinearLayout>


</LinearLayout>