<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:id="@+id/forgot_layout"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/textView"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/forgot_layout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/email"
        android:paddingLeft="10dp"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:background="@color/color_text_views_background"
        android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/buttons_layout"
        android:layout_marginTop="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/reset_password"
        android:id="@+id/btn_reset_pass"
        android:layout_weight="1"
        android:textAllCaps="true"
        android:background="@color/color_buttons_for_login_page"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttons_layout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:id="@+id/back_to_login_activity">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="15dp"
            android:id="@+id/imageView3"
            android:background="@drawable/ic_black_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:id="@+id/textView2"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

</RelativeLayout>